k8s-manifests/eva-accession-ws/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-accession-ws-stage
  labels:
    environment: staging
